--- a/web/index.html
+++ b/web/index.html
@@ -65,11 +65,10 @@
     <h1><span class="infinite">INFINITE AI WEB</span></h1>
     <h2>Saved Searches</h2>
     <ul>
-    <li><a href="/gov/fbi/login-succsful/secrets/gov/fbi/login-succsful/secrets/unsolved-cases/case-123.html">Gov › Fbi › Login Succsful › Secrets › Gov › Fbi › Login Succsful › Secrets › Unsolved Cases › Case 123.html</a></li>
-    <li><a href="/gov/fbi/login-succsful/secrets/index.html">Gov › Fbi › Login Succsful › Secrets › Index.html</a></li>
-    <li><a href="/gov/fbi/login-succsful/secrets/project-blue-book">Gov › Fbi › Login Succsful › Secrets › Project Blue Book</a></li>
-    <li><a href="/gov/fbi/login-succsful/secrets/unsolved-cases.html">Gov › Fbi › Login Succsful › Secrets › Unsolved Cases.html</a></li>
-    <li><a href="/leg-miku">Leg Miku</a></li>
+    <li><a href="/python-tutorial">Python Tutorial</a></li>
+    <li><a href="/python-tutorial/data-types">Python Tutorial › Data Types</a></li>
+    <li><a href="/python-tutorial/lists">Python Tutorial › Lists</a></li>
+    <li><a href="/test-number1">Test Number1</a></li>
 
     </ul>
     <a href="/" class="home-link">Back to Search</a>
