--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
     <h1><span class="infinite">INFINITE AI WEB</span></h1>
     <h2>Saved Searches</h2>
     <ul>
-    <li><a href="/python-tutorial">Python Tutorial</a></li>
-    <li><a href="/python-tutorial/data-types">Python Tutorial › Data Types</a></li>
-    <li><a href="/python-tutorial/lists">Python Tutorial › Lists</a></li>
-    <li><a href="/test-number1">Test Number1</a></li>
+    <li><a href="/web/python">Web › Python</a></li>
 
     </ul>
     <a href="/" class="home-link">Back to Search</a>
