--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
     <h1><span class="infinite">INFINITE AI WEB</span></h1>
     <h2>Saved Searches</h2>
     <ul>
+    <li><a href="/web/404">Web › 404</a></li>
+    <li><a href="/web/github">Web › Github</a></li>
+    <li><a href="/web/github/github/repositories/popular">Web › Github › Github › Repositories › Popular</a></li>
+    <li><a href="/web/github/repositories">Web › Github › Repositories</a></li>
     <li><a href="/web/python">Web › Python</a></li>
+    <li><a href="/web/tunisia/cities/tunis">Web › Tunisia › Cities › Tunis</a></li>
+    <li><a href="/web/tunisia/cities/tunis/bardo-museum">Web › Tunisia › Cities › Tunis › Bardo Museum</a></li>
+    <li><a href="/web/tunisia/cities/tunis/carthage">Web › Tunisia › Cities › Tunis › Carthage</a></li>
 
     </ul>
     <a href="/" class="home-link">Back to Search</a>
