--- a/index.html
+++ b/index.html
@@ -65,17 +65,15 @@
     <h1><span class="infinite">INFINITE AI WEB</span></h1>
     <h2>Saved Searches</h2>
     <ul>
-    <li><a href="/web/404">Web › 404</a></li>
-    <li><a href="/web/github">Web › Github</a></li>
-    <li><a href="/web/github/github/repositories/popular">Web › Github › Github › Repositories › Popular</a></li>
-    <li><a href="/web/github/repositories">Web › Github › Repositories</a></li>
-    <li><a href="/web/python">Web › Python</a></li>
-    <li><a href="/web/tunisia/cities/tunis">Web › Tunisia › Cities › Tunis</a></li>
-    <li><a href="/web/tunisia/cities/tunis/bardo-museum">Web › Tunisia › Cities › Tunis › Bardo Museum</a></li>
-    <li><a href="/web/tunisia/cities/tunis/carthage">Web › Tunisia › Cities › Tunis › Carthage</a></li>
+    <li><a href="web/python">Web › Python</a></li>
+    <li><a href="web/python/modules">Web › Python › Modules</a></li>
+    <li><a href="web/python/modules/os">Web › Python › Modules › Os</a></li>
+    <li><a href="web/python/modules/shutil">Web › Python › Modules › Shutil</a></li>
+    <li><a href="web/tunisia/cities/all">Web › Tunisia › Cities › All</a></li>
+    <li><a href="web/tunisia/cities/tunisia/cities/all/sfax">Web › Tunisia › Cities › Tunisia › Cities › All › Sfax</a></li>
 
     </ul>
-    <a href="/" class="home-link">Back to Search</a>
+    <a href="." class="home-link">Back to Search</a>
     <div class="footer">
         made with 🍋 by Lime1
     </div>
