--- a/index.html
+++ b/index.html
@@ -65,8 +65,18 @@
     <h1><span class="infinite">INFINITE AI WEB</span></h1>
     <h2>Saved Searches</h2>
     <ul>
+    <li><a href="web/fbi">Web › Fbi</a></li>
     <li><a href="web/gov/fbi">Web › Gov › Fbi</a></li>
     <li><a href="web/gov/fbi/contact">Web › Gov › Fbi › Contact</a></li>
+    <li><a href="web/microsoft/games/minecraft/bedrock-edition">Web › Microsoft › Games › Minecraft › Bedrock Edition</a></li>
+    <li><a href="web/microsoft/games/minecraft/bedrock-edition/download">Web › Microsoft › Games › Minecraft › Bedrock Edition › Download</a></li>
+    <li><a href="web/microsoft/games/minecraft/source-code">Web › Microsoft › Games › Minecraft › Source Code</a></li>
+    <li><a href="web/microsoft/games/minecraft/source-code/microsoft/games/minecraft/api/microsoft/games/minecraft/source-code/microsoft/games/minecraft/api/world/block">Web › Microsoft › Games › Minecraft › Source Code › Microsoft › Games › Minecraft › Api › Microsoft › Games › Minecraft › Source Code › Microsoft › Games › Minecraft › Api › World › Block</a></li>
+    <li><a href="web/microsoft/games/minecraft/source-code/microsoft/games/minecraft/api/microsoft/games/minecraft/source-code/microsoft/games/minecraft/api/world/block/id">Web › Microsoft › Games › Minecraft › Source Code › Microsoft › Games › Minecraft › Api › Microsoft › Games › Minecraft › Source Code › Microsoft › Games › Minecraft › Api › World › Block › Id</a></li>
+    <li><a href="web/microsoft/games/minecraft/source-code/microsoft/games/minecraft/api/world">Web › Microsoft › Games › Minecraft › Source Code › Microsoft › Games › Minecraft › Api › World</a></li>
+    <li><a href="web/microsoft/windows11/activation-keys/keys">Web › Microsoft › Windows11 › Activation Keys › Keys</a></li>
+    <li><a href="web/microsoft/windows11/activation-keys/list">Web › Microsoft › Windows11 › Activation Keys › List</a></li>
+    <li><a href="web/microsoft/windows11/activation-keys/tester/key-list/pro">Web › Microsoft › Windows11 › Activation Keys › Tester › Key List › Pro</a></li>
     <li><a href="web/python">Web › Python</a></li>
     <li><a href="web/python/data-types/tuples">Web › Python › Data Types › Tuples</a></li>
     <li><a href="web/python/modules">Web › Python › Modules</a></li>
