--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
     <h1><span class="infinite">INFINITE AI WEB</span></h1>
     <h2>Saved Searches</h2>
     <ul>
+    <li><a href="web/favicon.ico">Web › Favicon.ico</a></li>
     <li><a href="web/fbi">Web › Fbi</a></li>
     <li><a href="web/gov/fbi">Web › Gov › Fbi</a></li>
     <li><a href="web/gov/fbi/contact">Web › Gov › Fbi › Contact</a></li>
     <li><a href="web/gov/fbi/login/success/secrets/memo-1485">Web › Gov › Fbi › Login › Success › Secrets › Memo 1485</a></li>
+    <li><a href="web/helo">Web › Helo</a></li>
     <li><a href="web/microsoft/games/minecraft/bedrock-edition">Web › Microsoft › Games › Minecraft › Bedrock Edition</a></li>
     <li><a href="web/microsoft/games/minecraft/bedrock-edition/download">Web › Microsoft › Games › Minecraft › Bedrock Edition › Download</a></li>
     <li><a href="web/microsoft/games/minecraft/source-code">Web › Microsoft › Games › Minecraft › Source Code</a></li>
