--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <li><a href="web/gov/fbi">Web › Gov › Fbi</a></li>
     <li><a href="web/gov/fbi/contact">Web › Gov › Fbi › Contact</a></li>
     <li><a href="web/gov/fbi/login/success/secrets/memo-1485">Web › Gov › Fbi › Login › Success › Secrets › Memo 1485</a></li>
+    <li><a href="web/gov/fbi/login/success/secrets/memo-1486">Web › Gov › Fbi › Login › Success › Secrets › Memo 1486</a></li>
     <li><a href="web/helo">Web › Helo</a></li>
     <li><a href="web/microsoft/games/minecraft/bedrock-edition">Web › Microsoft › Games › Minecraft › Bedrock Edition</a></li>
     <li><a href="web/microsoft/games/minecraft/bedrock-edition/download">Web › Microsoft › Games › Minecraft › Bedrock Edition › Download</a></li>
